fix timer spacing

--- a/style.css
+++ b/style.css
@@ -477,6 +477,7 @@ footer {
   #container {
     max-width: 100%;
     height: 80%;
+    padding-bottom: 30%;
     margin: 30% auto;
     display: inline-block;
     text-align: left;
